--- a/themes/flex-block/source/css/_partial/header.styl
+++ b/themes/flex-block/source/css/_partial/header.styl
@@ -65,3 +65,34 @@
   margin-top: 18px
   font-size: var(--font-common-size)
 }
+
+/*
+@media screen and (min-width: 768px)
+  @keyframes move {
+    0% {
+      transform: translate3d(0, 0, 0)
+    }
+    100% {
+      transform: translate3d(-50%, 0, 0)
+    }
+  }
+
+  .header-container
+    position: relative
+    overflow: hidden
+
+    &::before
+      position: absolute
+      left: 0
+      bottom: -1px
+      content: ""
+      width: 200%
+      height 100%
+      display: block
+      z-index: 1
+      background-image: url("https://www.dusign.net/img/wave-dark.png")
+      background-repeat: repeat-x
+      background-position: left bottom 
+      background-size: 50% auto
+      animation move 10s linear infinite
+*/
